cmake_minimum_required(VERSION 4.1)

project(
    GameProgrammingHonorsProject
    VERSION 0.1
    LANGUAGES CXX)

# Set CXX version

# Find packages? libraries

# Raylib

# RayCPP

# Imgui

# rlImgui

set(IMGUI_VERSION 1.92.2b)
FetchContent_Declare(
    imgui
    URL https://github.com/ocornut/imgui/archive/refs/tags/v${IMGUI_VERSION}.zip
)
FetchContent_MakeAvailable(imgui)
# Fetches the version of Dear ImGui that we want

set(IMGUI_VERSION 1.91.8)
FetchContent_Declare(
    imgui
    URL https://github.com/ocornut/imgui/archive/refs/tags/v${IMGUI_VERSION}-docking.tar.gz
)
FetchContent_MakeAvailable(imgui)
add_library(imgui STATIC
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_demo.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp)
target_include_directories(imgui INTERFACE ${imgui_SOURCE_DIR})

# Compile 

add_executable(Game main.cpp)
